--- a/index.html
+++ b/index.html
@@ -49,14 +49,16 @@
         }
 
         #counters {
-            display: flex;
-            flex-wrap: wrap; /* 横向きでも折り返し */
+            display: grid;
+            grid-template-columns: repeat(2, 1fr); /* デフォルトは2列 */
             grid-gap: 1rem;
             padding: 1rem;
             width: 100%;
-            justify-content: center;
+            max-width: 100%;
+            justify-items: center;
             box-sizing: border-box;
             margin: 0 auto;
+            justify-content: center;
         }
 
         .counter-container {
@@ -67,10 +69,9 @@
             padding: 1.5rem;
             text-align: center;
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
-            width: calc(50% - 1rem); /* 縦向き時は2列 */
+            width: 100%;
             max-width: 300px; /* カウンターの最大幅を設定 */
             box-sizing: border-box;
-            margin: 0.5rem;
         }
 
         .dark-mode .counter-container {
@@ -109,13 +110,13 @@
         .button-group {
             display: flex;
             justify-content: center;
-            gap: 1rem;
+            gap: 0.5rem;
             margin: 1rem 0;
         }
 
         button {
-            width: calc(25% - 10px); /* カウンターサイズに対するボタンの比率を設定 */
-            height: 40px;
+            width: 45px; /* 縦向きでのボタンサイズ */
+            height: 45px; /* 縦向きでのボタンサイズ */
             font-size: 1.5rem; /* ボタンサイズに応じた記号のサイズ */
             border: none;
             border-radius: 8px;
@@ -220,12 +221,14 @@
         @media (min-width: 769px) {
             /* 横向きやPC用の調整 */
             #counters {
+                grid-template-columns: repeat(5, 1fr); /* 1行に5つ */
                 grid-gap: 1rem;
-                justify-content: space-between;
+                justify-items: center;
+                justify-content: center;
             }
 
             .counter-container {
-                width: calc(20% - 1rem); /* 横向き時は1行に配置 */
+                padding: 1.5rem;
             }
 
             .counter-container h2, .count, .remaining, .amount {
@@ -237,9 +240,9 @@
             }
 
             button {
-                width: 40px;
-                height: 40px;
-                font-size: 1.5rem;
+                width: 60px; /* 横向きやPC用のボタンサイズ */
+                height: 60px;
+                font-size: 2rem;
             }
 
             .charts-section {
@@ -253,26 +256,39 @@
             }
         }
 
-        @media (max-width: 768px) {
-            /* 縦向き用の調整 */
+        @media (max-width: 768px) and (orientation: landscape) {
+            /* スマートフォンの横向き用の調整 */
             #counters {
+                grid-template-columns: repeat(5, minmax(0, 1fr)); /* 幅に応じた調整 */
+                grid-gap: 0.5rem;
+                padding: 0.5rem;
+            }
+
+            .counter-container {
+                padding: 1rem;
+            }
+
+            .button-group {
+                gap: 0.3rem; /* 横向きでのボタングループの間隔調整 */
+            }
+        }
+
+        @media (max-width: 768px) and (orientation: portrait) {
+            /* スマートフォンの縦向き用の調整 */
+            #counters {
+                grid-template-columns: repeat(2, 1fr); /* 2列 */
                 grid-gap: 1rem;
                 padding: 0.5rem;
                 width: 100%;
             }
 
             .counter-container {
-                width: calc(50% - 1rem);
+                width: 100%;
+                padding: 1rem;
             }
 
-            .charts-section {
-                flex-direction: column;
-                justify-content: center;
-            }
-
-            .chart-container {
-                max-width: 100%;
-                margin: 10px 0;
+            .button-group {
+                gap: 0.5rem; /* 縦向きでのボタングループの間隔調整 */
             }
         }
     </style>
