--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@
         .remaining {
             font-size: 1.2rem;
             color: inherit;
-            white-space: nowrap; /* 残りカウントを1行で表示 */
         }
 
         .amount {
@@ -110,14 +109,13 @@
         .button-group {
             display: flex;
             justify-content: center;
-            gap: 0.5rem;
+            gap: 1rem;
             margin: 1rem 0;
         }
 
         button {
-            width: 45px; /* 縦向きでのボタンサイズ */
-            height: 45px; /* 縦向きでのボタンサイズ */
-            font-size: 1.5rem; /* ボタンサイズに応じた記号のサイズ */
+            padding: calc(0.8rem + 0.5vw) calc(1rem + 0.5vw); /* 幅に応じてpadding調整 */
+            font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
             border: none;
             border-radius: 8px;
             background-color: var(--button-bg);
@@ -240,9 +238,8 @@
             }
 
             button {
-                width: 60px; /* 横向きやPC用のボタンサイズ */
-                height: 60px;
-                font-size: 2rem;
+                padding: calc(0.8rem + 0.5vw) calc(1rem + 0.5vw); /* 幅に応じてpadding調整 */
+                font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
             }
 
             .charts-section {
@@ -256,25 +253,8 @@
             }
         }
 
-        @media (max-width: 768px) and (orientation: landscape) {
-            /* スマートフォンの横向き用の調整 */
-            #counters {
-                grid-template-columns: repeat(5, minmax(0, 1fr)); /* 幅に応じた調整 */
-                grid-gap: 0.5rem;
-                padding: 0.5rem;
-            }
-
-            .counter-container {
-                padding: 1rem;
-            }
-
-            .button-group {
-                gap: 0.3rem; /* 横向きでのボタングループの間隔調整 */
-            }
-        }
-
-        @media (max-width: 768px) and (orientation: portrait) {
-            /* スマートフォンの縦向き用の調整 */
+        @media (max-width: 768px) {
+            /* 縦向き用の調整 */
             #counters {
                 grid-template-columns: repeat(2, 1fr); /* 2列 */
                 grid-gap: 1rem;
@@ -287,8 +267,14 @@
                 padding: 1rem;
             }
 
-            .button-group {
-                gap: 0.5rem; /* 縦向きでのボタングループの間隔調整 */
+            .charts-section {
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .chart-container {
+                max-width: 100%;
+                margin: 10px 0;
             }
         }
     </style>
