--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
             width: 100%;
             max-width: 300px; /* カウンターの最大幅を設定 */
             box-sizing: border-box;
-            overflow: hidden; /* テキストがフレームを超えないようにする */
         }
 
         .dark-mode .counter-container {
@@ -91,21 +90,16 @@
             font-weight: 600;
             margin: 0;
             padding: 5px 0;
-            word-wrap: break-word; /* テキストがフレームを超えないようにする */
         }
 
         .count {
             font-size: 1.8rem;
             margin: 10px 0;
-            word-wrap: break-word; /* テキストがフレームを超えないようにする */
         }
 
         .remaining {
             font-size: 1.2rem;
             color: inherit;
-            white-space: nowrap; /* 残りカウントを1行で表示 */
-            overflow: hidden;
-            text-overflow: ellipsis; /* テキストがフレームを超えないようにする */
         }
 
         .amount {
@@ -115,14 +109,14 @@
         .button-group {
             display: flex;
             justify-content: center;
-            gap: 0.5rem;
+            gap: 1rem;
             margin: 1rem 0;
         }
 
         button {
-            width: 45px; /* 縦向きでのボタンサイズ */
-            height: 45px; /* 縦向きでのボタンサイズ */
-            font-size: 1.5rem; /* ボタンサイズに応じた記号のサイズ */
+            width: 40%; /* ボタンの幅をカウンターコンテナの幅の40%に設定 */
+            padding: calc(0.8rem + 0.5vw) calc(1rem + 0.5vw); /* 幅に応じてpadding調整 */
+            font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
             border: none;
             border-radius: 8px;
             background-color: var(--button-bg);
@@ -245,9 +239,9 @@
             }
 
             button {
-                width: 60px; /* 横向きやPC用のボタンサイズ */
-                height: 60px;
-                font-size: 2rem;
+                width: 30%; /* PC用の画面ではもう少し小さくする */
+                padding: calc(0.8rem + 0.8vw);
+                font-size: calc(1rem + 0.3vw);
             }
 
             .charts-section {
@@ -261,26 +255,8 @@
             }
         }
 
-        @media (max-width: 768px) and (orientation: landscape) {
-            /* スマートフォンの横向き用の調整 */
-            #counters {
-                grid-template-columns: repeat(5, minmax(0, 1fr)); /* 幅に応じた調整 */
-                grid-gap: 0.5rem;
-                padding: 0.5rem;
-                margin-top: 2rem; /* ダイナミックアイランドを避けるための余白 */
-            }
-
-            .counter-container {
-                padding: 1rem;
-            }
-
-            .button-group {
-                gap: 0.3rem; /* 横向きでのボタングループの間隔調整 */
-            }
-        }
-
-        @media (max-width: 768px) and (orientation: portrait) {
-            /* スマートフォンの縦向き用の調整 */
+        @media (max-width: 768px) {
+            /* 縦向き用の調整 */
             #counters {
                 grid-template-columns: repeat(2, 1fr); /* 2列 */
                 grid-gap: 1rem;
@@ -293,8 +269,14 @@
                 padding: 1rem;
             }
 
-            .button-group {
-                gap: 0.5rem; /* 縦向きでのボタングループの間隔調整 */
+            .charts-section {
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            .chart-container {
+                max-width: 100%;
+                margin: 10px 0;
             }
         }
     </style>
