--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         .remaining {
             font-size: 1.2rem;
             color: inherit;
+            white-space: nowrap; /* テキストが折り返されないようにする */
         }
 
         .amount {
@@ -114,7 +115,7 @@
         }
 
         button {
-            width: 40%; /* ボタンの幅をカウンターコンテナの幅の40%に設定 */
+            width: 50%; /* ボタンの幅をカウンターコンテナの幅の50%に設定 */
             padding: calc(0.8rem + 0.5vw) calc(1rem + 0.5vw); /* 幅に応じてpadding調整 */
             font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
             border: none;
@@ -239,7 +240,7 @@
             }
 
             button {
-                width: 30%; /* PC用の画面ではもう少し小さくする */
+                width: 40%; /* PC用の画面ではもう少し小さくする */
                 padding: calc(0.8rem + 0.8vw);
                 font-size: calc(1rem + 0.3vw);
             }
