--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             transition: transform 0.2s, background-color 0.3s, color 0.3s;
             width: 100%;
             max-width: 300px; /* カウンターの最大幅を設定 */
-            height: 100%; /* カウンターの高さをボタンの高さに対応させる */
+            height: 250px; /* カウンターの高さを固定 */
             box-sizing: border-box;
         }
 
@@ -111,14 +111,14 @@
         .button-group {
             display: flex;
             justify-content: center;
-            gap: 1rem;
+            gap: 15%; /* カウンターの幅の15%の距離を設定 */
             margin: 1rem 0;
         }
 
         button {
-            width: 40%; /* ボタンの幅をカウンターコンテナの幅の50%に設定 */
+            width: 40%; /* ボタンの幅をカウンターコンテナの幅の40%に設定 */
             aspect-ratio: 1 / 1; /* ボタンのアスペクト比を1:1に設定 */
-            font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
+            font-size: calc(1rem + 0.5vw); /* 幅に応じてfont-size調整 */
             border: none;
             border-radius: 8px;
             background-color: var(--button-bg);
@@ -141,6 +141,11 @@
 
         button:active {
             transform: scale(0.95);
+        }
+
+        .icon-plus::before, .icon-minus::before {
+            font-size: calc(1.5rem + 1vw); /* ボタンのサイズに比例して記号のサイズを調整 */
+            content: '';
         }
 
         .icon-plus::before {
@@ -208,6 +213,7 @@
             padding: 1rem;
             box-sizing: border-box;
             margin: 0 auto;
+            justify-content: center; /* 中央に近づける */
         }
 
         .chart-container {
@@ -241,12 +247,12 @@
             }
 
             button {
-                width: 40%; /* PC用の画面ではもう少し小さくする */
+                width: 30%; /* PC用の画面ではもう少し小さくする */
             }
 
             .charts-section {
                 flex-direction: row; /* グラフを横に配置 */
-                justify-content: space-between;
+                justify-content: center; /* 中央に近づける */
             }
 
             .chart-container {
@@ -521,7 +527,7 @@
 
             const mediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
             function applyTheme(e) {
-                if ( e.matches) {
+                if (e.matches) {
                     document.body.classList.add('dark-mode');
                 } else {
                     document.body.classList.remove('dark-mode');
