--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const firebaseConfig = {
-                apiKey: "API_KEY",
-                authDomain: "PROJECT_ID.firebaseapp.com",
-                databaseURL: "https://PROJECT_ID.firebaseio.com",
-                projectId: "PROJECT_ID",
-                storageBucket: "PROJECT_ID.appspot.com",
-                messagingSenderId: "SENDER_ID",
-                appId: "APP_ID"
+                apiKey: "AIzaSyDfmjWjPl786cVBXzqlsiZsS4MUFbwrNNM",
+                authDomain: "school-festival-e4c8d.firebaseapp.com",
+                databaseURL: "https://school-festival-e4c8d-default-rtdb.firebaseio.com",
+                projectId: "school-festival-e4c8d",
+                storageBucket: "school-festival-e4c8d.appspot.com",
+                messagingSenderId: "658868728855",
+                appId: "1:658868728855:web:8d7497c6838f5a42d21852"
             };
 
             firebase.initializeApp(firebaseConfig);
