--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             max-width: 300px; /* カウンターの最大幅を設定 */
             height: 100%; /* カウンターの高さをボタンの高さに対応させる */
             box-sizing: border-box;
+            max-height: 100vh; /* ダイナミックアイランド対応 */
         }
 
         .dark-mode .counter-container {
@@ -102,6 +103,8 @@
             font-size: 1.2rem;
             color: inherit;
             white-space: nowrap; /* テキストが折り返されないようにする */
+            width: 100%; /* 幅を固定 */
+            text-align: right; /* 右寄せ */
         }
 
         .amount {
@@ -118,7 +121,7 @@
         button {
             width: 50%; /* ボタンの幅をカウンターコンテナの幅の50%に設定 */
             aspect-ratio: 1 / 1; /* ボタンのアスペクト比を1:1に設定 */
-            font-size: calc(1rem + 0.2vw); /* 幅に応じてfont-size調整 */
+            font-size: calc(2rem + 0.5vw); /* 幅に応じてfont-size調整 */
             border: none;
             border-radius: 8px;
             background-color: var(--button-bg);
@@ -129,6 +132,7 @@
             align-items: center;
             justify-content: center;
             touch-action: manipulation;
+            max-width: 80px; /* ボタンの最大幅を設定 */
         }
 
         .dark-mode button {
@@ -246,7 +250,7 @@
 
             .charts-section {
                 flex-direction: row; /* グラフを横に配置 */
-                justify-content: space-between;
+                justify-content: center; /* 中央寄せ */
             }
 
             .chart-container {
