--- a/index.html
+++ b/index.html
@@ -272,9 +272,9 @@
         @media (orientation: landscape) and (max-width: 768px) {
             /* ランドスケープモードのときにスペースを追加 */
             .counters-section {
-                padding-left: 2rem; /* 左右に余白を追加 */
-                padding-right: 2rem; /* 左右に余白を追加 */
-                margin-top: env(safe-area-inset-top); /* ダイナミックアイランド対応 */
+                padding-left: 2rem !important; /* 左右に余白を追加 */
+                padding-right: 2rem !important; /* 左右に余白を追加 */
+                margin-top: env(safe-area-inset-top) !important; /* ダイナミックアイランド対応 */
             }
 
             #counters {
