--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr); /* デフォルトは2列 */
             grid-gap: 1rem;
-            padding: 1rem;
+            padding: 1rem 1.5rem; /* 横向きモードでの配置を内側に移動 */
             width: 100%;
             max-width: 100%;
             justify-items: center;
@@ -148,7 +148,8 @@
         }
 
         .icon-plus::before, .icon-minus::before {
-            font-size: calc(1rem + 0.2vw); /* ボタンのサイズに応じてアイコンのフォントサイズを調整 */
+            content: attr(data-icon);
+            font-size: calc(2rem + 0.2vw); /* ボタンのサイズに応じてアイコンのフォントサイズを調整 */
         }
 
         .totals-container {
@@ -260,7 +261,7 @@
             #counters {
                 grid-template-columns: repeat(2, 1fr); /* 2列 */
                 grid-gap: 1rem;
-                padding: 0.5rem;
+                padding: 0.5rem 1rem; /* 横向きモードでの配置を内側に移動 */
                 width: 100%;
             }
 
@@ -306,8 +307,8 @@
                 <div class="remaining" id="plain-remaining">残り: 30 個</div>
                 <div class="amount" id="plain-amount">0 円</div>
                 <div class="button-group">
-                    <button onclick="changeCount('plain', 1)" class="icon-plus"></button>
-                    <button onclick="changeCount('plain', -1)" class="icon-minus"></button>
+                    <button onclick="changeCount('plain', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('plain', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
             <div class="counter-container" id="choco-counter" style="border-top: 5px solid #8B4513;">
@@ -316,8 +317,8 @@
                 <div class="remaining" id="choco-remaining">残り: 100 個</div>
                 <div class="amount" id="choco-amount">0 円</div>
                 <div class="button-group">
-                    <button onclick="changeCount('choco', 1)" class="icon-plus"></button>
-                    <button onclick="changeCount('choco', -1)" class="icon-minus"></button>
+                    <button onclick="changeCount('choco', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('choco', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
             <div class="counter-container" id="strawberry-counter" style="border-top: 5px solid #FF6347;">
@@ -326,8 +327,8 @@
                 <div class="remaining" id="strawberry-remaining">残り: 100 個</div>
                 <div class="amount" id="strawberry-amount">0 円</div>
                 <div class="button-group">
-                    <button onclick="changeCount('strawberry', 1)" class="icon-plus"></button>
-                    <button onclick="changeCount('strawberry', -1)" class="icon-minus"></button>
+                    <button onclick="changeCount('strawberry', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('strawberry', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
             <div class="counter-container" id="matcha-counter" style="border-top: 5px solid #3CB371;">
@@ -336,8 +337,8 @@
                 <div class="remaining" id="matcha-remaining">残り: 50 個</div>
                 <div class="amount" id="matcha-amount">0 円</div>
                 <div class="button-group">
-                    <button onclick="changeCount('matcha', 1)" class="icon-plus"></button>
-                    <button onclick="changeCount('matcha', -1)" class="icon-minus"></button>
+                    <button onclick="changeCount('matcha', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('matcha', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
             <div class="counter-container" id="jdk-counter" style="border-top: 5px solid #FFD700;">
@@ -346,8 +347,8 @@
                 <div class="remaining" id="jdk-remaining">残り: 20 個</div>
                 <div class="amount" id="jdk-amount">0 円</div>
                 <div class="button-group">
-                    <button onclick="changeCount('jdk', 1)" class="icon-plus"></button>
-                    <button onclick="changeCount('jdk', -1)" class="icon-minus"></button>
+                    <button onclick="changeCount('jdk', 1)" class="icon-plus" data-icon="+"></button>
+                    <button onclick="changeCount('jdk', -1)" class="icon-minus" data-icon="-"></button>
                 </div>
             </div>
         </div>
